--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,8 @@ node_modules
 frontend/node_modules
 backend/node_modules
 backend/.env
-backend/config
+backend/config/instantWin/*
+backend/config/questionnaire/*
+backend/config/receiptCampaign/*
+backend/config/shoppingRally/*
 frontend/.env
