--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,11 @@ frontend/node_modules
 backend/node_modules
 backend/.env
 backend/config/instantWin/*
+!backend/config/instantWin/.gitkeep
 backend/config/questionnaire/*
+!backend/config/questionnaire/.gitkeep
 backend/config/receiptCampaign/*
+!backend/config/receiptCampaign/.gitkeep
 backend/config/shoppingRally/*
+!backend/config/shoppingRally/.gitkeep
 frontend/.env
