--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node src/index.ts"
+    "start": "npx ts-node src/index.ts",
+    "loadtest": "npx ts-node loadtest.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,8 @@
     "dayjs": "^1.11.8",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
+    "loadtest": "^5.2.0",
     "log4js": "^6.9.1",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
