[Change]バックエンドの負荷分散の実施、prepared stmtの増加対策として一時的にqueryに置換

--- a/.gitignore
+++ b/.gitignore
@@ -13,4 +13,6 @@ backend/config/shoppingRally/*
 !backend/config/shoppingRally/.gitkeep
 backend/logs/*
 !backend/logs/.gitkeep
+backend/uploadDist/*
+!backend/uploadDist/.gitkeep
 frontend/.env
