--- a/backend/package.json
+++ b/backend/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/autocannon": "^7.9.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.2.5",
+    "autocannon": "^7.11.0",
     "cors": "^2.8.5",
     "dayjs": "^1.11.8",
     "dotenv": "^16.1.4",
@@ -24,9 +26,11 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "uid": "^2.0.2"
   },
   "devDependencies": {
-    "@types/multer": "^1.4.7"
+    "@types/multer": "^1.4.7",
+    "axios": "^1.4.0"
   }
 }
