--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,6 @@ backend/logs/*
 !backend/logs/.gitkeep
 backend/uploadDist/*
 !backend/uploadDist/.gitkeep
-frontend/.env
+
+frontend/.env.dev
+frontend/.env.prod
